[package]
name = "raft_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
axum = "0.6"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
rand = "0.9.0-alpha.2"